--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1083,11 +1083,12 @@ p, li { white-space: pre-wrap; }
    </property>
    <widget class="QMenu" name="menu">
     <property name="title">
-     <string>Файл</string>
+     <string>Проект</string>
     </property>
     <addaction name="actionSave"/>
     <addaction name="separator"/>
     <addaction name="actionStartAnotherKD"/>
+    <addaction name="actionSaveProject"/>
    </widget>
    <widget class="QMenu" name="menu_2">
     <property name="title">
@@ -1111,6 +1112,11 @@ p, li { white-space: pre-wrap; }
   <action name="actionStartAnotherKD">
    <property name="text">
     <string>Начать работу с другим КД</string>
+   </property>
+  </action>
+  <action name="actionSaveProject">
+   <property name="text">
+    <string>Сохранить проект...</string>
    </property>
   </action>
  </widget>
