--- a/startdialog.ui
+++ b/startdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>560</width>
-    <height>269</height>
+    <height>220</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -600,74 +600,34 @@
           <property name="bottomMargin">
            <number>4</number>
           </property>
-          <item row="0" column="1" rowspan="2">
-           <widget class="Line" name="line_2">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
+          <item row="2" column="2">
+           <widget class="QPushButton" name="pb_continueSaved">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
+            <property name="text">
+             <string>Продолжить сохранённый проект</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="2">
-           <widget class="QGroupBox" name="groupBox">
-            <property name="title">
-             <string>Сохранения:</string>
-            </property>
-            <layout class="QGridLayout" name="gridLayout_5">
-             <property name="leftMargin">
-              <number>0</number>
-             </property>
-             <property name="topMargin">
-              <number>0</number>
-             </property>
-             <property name="rightMargin">
-              <number>0</number>
-             </property>
-             <property name="bottomMargin">
-              <number>0</number>
-             </property>
-             <property name="verticalSpacing">
-              <number>1</number>
-             </property>
-             <item row="0" column="1">
-              <widget class="QLineEdit" name="lineEdit"/>
-             </item>
-             <item row="0" column="0">
-              <widget class="QLabel" name="label_3">
-               <property name="text">
-                <string>Путь к папке:</string>
-               </property>
-              </widget>
-             </item>
-             <item row="0" column="2">
-              <widget class="QPushButton" name="pushButton_2">
-               <property name="maximumSize">
-                <size>
-                 <width>27</width>
-                 <height>27</height>
-                </size>
-               </property>
-               <property name="text">
-                <string>...</string>
-               </property>
-              </widget>
-             </item>
-             <item row="1" column="0" colspan="3">
-              <widget class="QListWidget" name="lw_saves"/>
-             </item>
-            </layout>
-           </widget>
-          </item>
-          <item row="1" column="0">
+          <item row="2" column="0">
            <widget class="QPushButton" name="pb_startNew">
             <property name="text">
              <string>Начать новый проект</string>
             </property>
            </widget>
           </item>
+          <item row="0" column="1" rowspan="3">
+           <widget class="Line" name="line_2">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+           </widget>
+          </item>
           <item row="1" column="2">
-           <widget class="QPushButton" name="pb_continueSaved">
+           <widget class="QPushButton" name="pb_loadFile">
             <property name="text">
-             <string>Продолжить сохранённый проект</string>
+             <string>Выбрать файл проекта...</string>
             </property>
            </widget>
           </item>
