--- a/knowledgebase.ui
+++ b/knowledgebase.ui
@@ -240,6 +240,9 @@
       </item>
       <item>
        <widget class="QCheckBox" name="ch_all_acts">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="font">
          <font>
           <pointsize>12</pointsize>
@@ -247,6 +250,9 @@
         </property>
         <property name="text">
          <string>Все акты</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
         </property>
        </widget>
       </item>
