--- a/knowledgebase.ui
+++ b/knowledgebase.ui
@@ -205,6 +205,9 @@
       <layout class="QVBoxLayout" name="verticalLayout_5">
        <item>
         <widget class="QGroupBox" name="groupBox_2">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -603,7 +606,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Внести в файл</string>
+        <string>Добавить в файл</string>
        </property>
       </widget>
      </item>
