--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -799,6 +799,13 @@ p, li { white-space: pre-wrap; }
         </item>
        </layout>
       </item>
+      <item row="5" column="2" colspan="2">
+       <widget class="QPushButton" name="pb_cancel">
+        <property name="text">
+         <string>Отмена</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
     <item row="2" column="0">
