--- a/listkd.ui
+++ b/listkd.ui
@@ -163,7 +163,7 @@
      <item>
       <widget class="QPushButton" name="DetailKTR">
        <property name="enabled">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="minimumSize">
         <size>
